@@ -1,3 +1,6 @@
+21/06/2010
+- removed use of PHP shortags SMARTY_PHP_PASSTHRU mode
+
 20/06/2010
 - replace internal get_time() calls with standard PHP5 microtime(true) calls
 - closed security hole when php.ini asp_tags = on
